--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.iml
+.gradle
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -7,7 +8,6 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
 /captures
 .externalNativeBuild
 .cxx
